--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002 -H 0.0.0.0",
+    "dev": "next dev -p 9002 -H 0.0.0.0",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
@@ -41,14 +41,14 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "genkit": "^1.8.0",
-    "lucide-react": "^0.395.0",
+    "lucide-react": "0.395.0",
     "mysql2": "^3.10.0",
-    "next": "^14.2.4",
+    "next": "14.2.3",
     "patch-package": "^8.0.0",
     "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.3.0",
