--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.4.5",
     "firebase": "^11.9.1",
-    "lucide-react": "0.395.0",
-    "mysql2": "^3.10.0",
+    "lucide-react": "^0.408.0",
+    "mysql2": "^3.10.1",
     "next": "14.2.3",
     "patch-package": "^8.0.0",
     "qrcode.react": "^3.1.0",
@@ -47,7 +47,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
@@ -56,7 +56,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/qrcode.react": "^1.0.5",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.40",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
