--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev -p 9002 -H 0.0.0.0",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start -p 3001 -H 0.0.0.0",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
