en NEXT_PUBLIC_BASE_URL que debo usar ?

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-# Configuración de la Base de Datos
-# Copia este archivo a .env.local y rellena los valores.
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=qreasy_db
+# Entorno de Base de Datos
+# Reemplaza los valores con las credenciales de tu base de datos MariaDB/MySQL.
+DB_HOST="localhost"
+DB_USER="tu_usuario_de_bd"
+DB_PASSWORD="tu_contraseña_de_bd"
+DB_NAME="tu_nombre_de_bd"
 
-# URL base para generar las URLs cortas
-# En desarrollo, usa localhost o tu IP local para pruebas en móvil.
-# En producción, usa tu dominio completo con https.
-NEXT_PUBLIC_BASE_URL=http://localhost:9002
+# URL Pública de la Aplicación
+# Esta es la URL completa donde tu aplicación es accesible desde internet.
+# Es crucial para generar correctamente las URLs de los códigos QR.
+# Debe incluir el subdirectorio si existe (ej: /studio).
+NEXT_PUBLIC_BASE_URL="https://esquel.org.ar/studio"
