I see this error with the app, reported by NextJS, please fix it. The er

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,8 @@
-# Entorno de Base de Datos
-# Reemplaza los valores con las credenciales de tu base de datos MariaDB/MySQL.
-DB_HOST="localhost"
-DB_USER="tu_usuario_de_bd"
-DB_PASSWORD="tu_contraseña_de_bd"
-DB_NAME="tu_nombre_de_bd"
+# Database connection
+DB_HOST=127.0.0.1
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_NAME=qreasy_db
 
-# URL Pública de la Aplicación
-# Esta es la URL completa donde tu aplicación es accesible desde internet.
-# Es crucial para generar correctamente las URLs de los códigos QR.
-# Debe incluir el subdirectorio si existe (ej: /studio).
-NEXT_PUBLIC_BASE_URL="https://esquel.org.ar/studio"
+# Base URL for the application (IMPORTANT: no trailing slash)
+NEXT_PUBLIC_BASE_URL=https://qr.esquel.org.ar
