--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Database connection
+# Credenciales de la Base de Datos - Reemplaza con tus valores reales
 DB_HOST=127.0.0.1
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=qreasy_db
+DB_USER=tu_usuario_de_bd
+DB_PASSWORD=tu_contraseña_de_bd
+DB_NAME=el_nombre_de_tu_bd
 
-# Base URL for the application (IMPORTANT: no trailing slash)
+# URL pública de la aplicación - Reemplaza con tu dominio
 NEXT_PUBLIC_BASE_URL=https://qr.esquel.org.ar
