dentro del archivo env.local los valores de los parametros van entre com

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-# Credenciales de la Base de Datos - Reemplaza con tus valores reales
+# Credenciales de la Base de Datos
+# Reemplaza estos valores con los de tu base de datos real.
+# No uses comillas para estos valores a menos que contengan espacios.
 DB_HOST=127.0.0.1
-DB_USER=tu_usuario_de_bd
-DB_PASSWORD=tu_contraseña_de_bd
-DB_NAME=el_nombre_de_tu_bd
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-# URL pública de la aplicación - Reemplaza con tu dominio
+# URL pública de la aplicación
+# Esta es la URL base que se usará para generar las URL cortas de los códigos QR.
+# Asegúrate de que apunte al dominio donde desplegarás la aplicación.
+# Ejemplo para producción: https://qr.esquel.org.ar
+# Ejemplo para desarrollo local: http://localhost:3001
 NEXT_PUBLIC_BASE_URL=https://qr.esquel.org.ar
