--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 
 {
-  "name": "nextn",
-  "version": "0.1.0",
+  "name": "qreasy",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9002 -H 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
