[root@vps-5062334-x /home/esquel.org.ar/qr] # sudo docker run -d --resta

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
+# Este es un archivo de ejemplo. Copia este contenido a un nuevo archivo
+# llamado .env.local y rellena los valores con tus credenciales reales.
+# No uses comillas para los valores.
+
 # Credenciales de la Base de Datos
-# Reemplaza estos valores con los de tu base de datos real.
-# No uses comillas para estos valores a menos que contengan espacios.
 DB_HOST=127.0.0.1
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 
-# URL pública de la aplicación
-# Esta es la URL base que se usará para generar las URL cortas de los códigos QR.
-# Asegúrate de que apunte al dominio donde desplegarás la aplicación.
-# Ejemplo para producción: https://qr.esquel.org.ar
-# Ejemplo para desarrollo local: http://localhost:3001
+# URL pública completa donde se alojará la aplicación.
+# Esta URL se usa para generar las URL cortas de los códigos QR.
 NEXT_PUBLIC_BASE_URL=https://qr.esquel.org.ar
