I see this error with the app, reported by NextJS, please fix it. The er

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
-# Este es un archivo de ejemplo. Copia este contenido a un nuevo archivo
-# llamado .env.local y rellena los valores con tus credenciales reales.
-# No uses comillas para los valores.
-
 # Credenciales de la Base de Datos
-DB_HOST=127.0.0.1
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+# ¡IMPORTANTE! Si tu base de datos corre en el mismo servidor que Docker,
+# USA 172.17.0.1 como DB_HOST.
+# (127.0.0.1 dentro de un contenedor Docker se refiere al propio contenedor, no al servidor).
+DB_HOST=172.17.0.1
+DB_USER=qreasy_user
+DB_PASSWORD=secret_password
+DB_NAME=qreasy_db
 
-# URL pública completa donde se alojará la aplicación.
-# Esta URL se usa para generar las URL cortas de los códigos QR.
+# URL pública de tu aplicación, usada para generar los enlaces cortos.
+# Asegúrate de que no tenga una barra al final.
 NEXT_PUBLIC_BASE_URL=https://qr.esquel.org.ar
