--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,35 @@
-# Evita que se copien archivos innecesarios a la imagen de Docker
-.dockerignore
-Dockerfile
-.env
-.env*.local
+# See https://docs.docker.com/engine/reference/builder/#dockerignore-file
+
+# Git
 .git
 .gitignore
-.next/
-node_modules/
+
+# node.js
+node_modules
 npm-debug.log
+yarn-error.log
+
+# Editor directories and files
+.vscode
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Build outputs
+.next
+out
+build
+
+# Env files
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
+# Docs and scripts
 README.md
 CONTRIBUTING.md
-.vscode/
+setup-and-push.sh
+apphosting.yaml
