--- a/.gitignore
+++ b/.gitignore
@@ -15,27 +15,32 @@
 # Production
 /build
 
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
-
 # Misc
 .DS_Store
 *.pem
 
-# Environment files
-.env
-.env*.local
-!.env.example
-
-# Log files
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Docker
-docker-compose.yml
+# Local .env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase
+.firebase/
+firebase-debug.log*
+database-debug.log*
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Test script
+check-db.js
