--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
   }
