--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# Testing
-/coverage
-
-# Next.js build output
+# Build outputs
 /.next/
 /out/
 
-# Production
-/build
-
-# Misc
-.DS_Store
-*.pem
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local .env files
+# Local Environment & Secrets
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Firebase
-.firebase/
-firebase-debug.log*
-database-debug.log*
-
-# VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# Test script
-check-db.js
