--- a/.dockerignore
+++ b/.dockerignore
@@ -1,35 +1,6 @@
-# See https://docs.docker.com/engine/reference/builder/#dockerignore-file
-
-# Git
+# Estos archivos no son necesarios en el contexto de la build de Docker
 .git
-.gitignore
-
-# node.js
-node_modules
-npm-debug.log
-yarn-error.log
-
-# Editor directories and files
-.vscode
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# Build outputs
 .next
-out
-build
-
-# Env files
-.env.local
-.env.development.local
-.env.production.local
-.env.test.local
-
-# Docs and scripts
+.vscode
+node_modules
 README.md
-CONTRIBUTING.md
-setup-and-push.sh
-apphosting.yaml
