--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,22 @@
-# Estos archivos no son necesarios en el contexto de la build de Docker
+# See https://docs.docker.com/engine/reference/builder/#dockerignore-file
+
+# Git
 .git
-.next
-.vscode
+.gitignore
+
+# Dependencies
 node_modules
-README.md
+
+# Build artifacts
+.next/
+out/
+
+# Env files from local development that should not be in the image
+.env
+.env.development
+.env.test
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
