--- a/.dockerignore
+++ b/.dockerignore
@@ -1,22 +1,19 @@
-# See https://docs.docker.com/engine/reference/builder/#dockerignore-file
-
-# Git
-.git
-.gitignore
-
-# Dependencies
+# Ignorar dependencias locales y logs
 node_modules
+npm-debug.log*
+yarn-error.log*
+.DS_Store
 
-# Build artifacts
-.next/
-out/
+# Ignorar la carpeta de build de Next.js
+.next
 
-# Env files from local development that should not be in the image
-.env
+# Ignorar configuraciones de entorno que no sean .env.local
+# .env.local es necesario durante la fase de build para las variables NEXT_PUBLIC_*
 .env.development
+.env.production
 .env.test
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Ignorar configuraciones de Git y VSCode
+.git
+.github
+.vscode
